--- a/public/styles.css
+++ b/public/styles.css
@@ -5,7 +5,17 @@ h3 {
 
 .list-group-item {
   cursor: pointer;
+  text-decoration: none;
+  color: #000;
 }
 .list-group-item:hover {
   background-color: #d9d9e0;
+}
+
+.container {
+  margin-top: 30px;
+  color: #000000c7;
+  background: #fff;
+  padding: 2rem;
+  border: 1px rgba(0, 0, 0, 0.125) solid;
 }
